syntax = "proto3";

option csharp_namespace = "ClientGRPC";

service MessageBroker {
    rpc Publish(PublishRequest) returns (PublishReply);
    rpc Subscribe(ClientRequest) returns (ClientRequest); // Cambié Message a ClientRequest
    rpc GetTopics (Empty) returns (TopicList);
    rpc Subscribe_publisher (ClientRequest) returns (Message);
}

message PublishRequest {
    string topic = 1;
    string message = 2;
    string idPublish = 3;
}

message PublishReply {
    string status = 1;
}

message SubscribeRequest {
    string topic = 1;
}

message Message {
    string topic = 1;
    string message = 2;
    string content = 3;
}

message Empty {}

message TopicList {
    repeated string topics = 1;
}

message ClientRequest {
    string Id = 1;
    string Nombre = 2;
    int32 Edad = 3;
    string suscritor = 4;
    string suscritorPublish = 5;
    string Topic = 6;
}
